mejoras en admin y aumentos de permisos de helmet

--- a/src/interfaces/views/index.ejs
+++ b/src/interfaces/views/index.ejs
@@ -93,12 +93,14 @@
                                         <li><a class="nav-link" href="#intercambio">Intercambio</a></li>
                                         <!-- Actualizar enlaces para anclar a las secciones -->
                                         <li><a class="nav-link" href="#servicios">Servicios</a></li>
-                                        <li><a class="nav-link" href="#proximamente">Próximamente</a></li>
+                                        
 
                                         <% if (!token) { %>                                       
                                         <li><a class="nav-link" href="#contacto">Contacto</a></li>
+                                        <li><a class="nav-link" href="#proximamente">Próximamente</a></li>
                                         <% } else { %>
-                                        <li><a class="nav-link" href="/tablas">Admin UNO</a></li>
+                                        
+                                        <li><a class="nav-link" href="/tablas">Control Administrativo</a></li>
                                         <% } %>
                                     </ul>
 
