optimizar imagenes a webp

--- a/src/interfaces/views/index.ejs
+++ b/src/interfaces/views/index.ejs
@@ -40,7 +40,7 @@
     <!-- LOADER -->
     <div id="preloader">
         <div class="loader">
-            <img src="images/loader.gif" alt="#" />
+            <img src="images/loader.webp" alt="#" />
         </div>
     </div>
     <!-- end loader -->
@@ -309,25 +309,25 @@
             <div class="row">
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="full services_blog">
-                        <img class="img-responsive" src="images/seguros.png" alt="#" />
+                        <img class="img-responsive" src="images/service/seguros.webp" alt="#" />
                         <h4>Protegido y Seguro</h4>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="full services_blog">
-                        <img class="img-responsive" src="images/pidiendo_credito_de_consumo 3.png" alt="#" />
+                        <img class="img-responsive" src="images/service/credito.webp" alt="#" />
                         <h4>Crédito de Consumo</h4>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="full services_blog">
-                        <img class="img-responsive" src="images/pidiendo_credito_hipotecario.png" alt="#" />
+                        <img class="img-responsive" src="images/service/hipoteca.webp" alt="#" />
                         <h4>Crédito Hipotecario</h4>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="full services_blog">
-                        <img class="img-responsive" src="images/Soporte.png" alt="#" />
+                        <img class="img-responsive" src="images/service/Soporte.webp" alt="#" />
                         <h4>Soporte de expertos</h4>
                     </div>
                 </div>
@@ -440,7 +440,7 @@
             <div class="row">
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="full news_blog">
-                        <img class="img-responsive" src="images/manomoneda.png" alt="#" />
+                        <img class="img-responsive" src="images/back/monedas.webp" alt="#" />
                         <div class="overlay"><a class="main_bt transparent" href="#">Vista</a></div>
                         <div class="blog_details">
                             <h3>Nueva Moneda</h3>
@@ -451,7 +451,7 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="full news_blog">
-                        <img class="img-responsive" src="images/noticias.png" alt="#" />
+                        <img class="img-responsive" src="images/back/noticias.webp" alt="#" />
                         <div class="overlay"><a class="main_bt transparent" href="#">Vista</a></div>
                         <div class="blog_details">
                             <h3>Noticias</h3>
@@ -462,7 +462,7 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="full news_blog">
-                        <img class="img-responsive" src="images/seguro2.png" alt="#" />
+                        <img class="img-responsive" src="images/back/seguros.webp" alt="#" />
                         <div class="overlay"><a class="main_bt transparent" href="#">Vista</a></div>
                         <div class="blog_details">
                             <h3>Seguros</h3>
