rol admin en nplantillas

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1932,7 +1932,7 @@ p {
 .white_fonts .post_info i,
 .white_fonts div,
 .white_fonts a.read_more {
-	color: #fff !important;
+	color: #fa0000 !important;
 }
 
 .red_bg .about-main-info a {
