--- a/src/interfaces/views/index.ejs
+++ b/src/interfaces/views/index.ejs
@@ -57,9 +57,9 @@
                     <div class="site_information">
                         <ul>
                             <li><a href="mailto:exchang@gmail.com"><img class="img-responsive" style="max-width: auto; max-height: auto;" src="images/mail_icon.png"
-                                        alt="#" />RaizFinanciera@gmail.com</a></li>
+                                        alt="#" /><br>RaizFinanciera@gmail.com</a></li>
                             <li><a href="tel:exchang@gmail.com"><img src="images/phone_icon.png"
-                                        alt="#" />+56978449038</a></li>
+                                        alt="#" /><br>+56978449038</a></li>
                             <li>
                                 <% if (!token) { %>
                                     <a class="join_bt" href="/login">Login</a>
