--- a/public/css/errores/error404.css
+++ b/public/css/errores/error404.css
@@ -12,7 +12,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url("../../imagenes/login/banner_login.jpg");
+    background-image: url("../../images/back/back_1.webp");
     background-size: cover;
     background-position: center;
     filter: blur(10px); /* Aplica el desenfoque */
