--- a/src/interfaces/views/index.ejs
+++ b/src/interfaces/views/index.ejs
@@ -133,14 +133,14 @@
         <!-- Hero Section -->
         <section id="hero" class="hero section dark-background">
 
-            <img src="../../../images/back/universidad-mayor.jpg" alt="" data-aos="fade-in">
+            <img src="../../../images/back/back_banco.webp" alt="" data-aos="fade-in">
 
             <div class="container">
 
                 <div class="row justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
                     <div class="col-xl-6 col-lg-8">
-                        <h2>titulo<span>.</span></h2>
-                        <p>titulo</p>
+                        <h2>Raíz Finaciera<span>.</span></h2>
+                        <p>Tú banco de confinza.</p>
                     </div>
                 </div>
 
@@ -259,10 +259,10 @@
                         <img src="../../../images/back/logo_raiz_financiera.webp" class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-6 order-2 order-lg-1 content">
-                        <h3>titulo</h3>
+                        <h3>Quienes Somos</h3>
 
                         <ul>
-                            <li><i class="bi bi-check2-all"></i> <span>titulo</span></li>
+                            <li><i class="bi bi-check2-all"></i> <span>Nuestra Historia</span></li>
                             <li><i class="bi bi-check2-all"></i> <span>Lo que comenzó como un pequeño equipo apasionado
                                     por las finanzas, hoy se ha convertido en una firma reconocida por su transparencia,
                                     profesionalismo y enfoque en el crecimiento sostenible. A lo largo de los años,
