--- a/src/interfaces/views/registro.ejs
+++ b/src/interfaces/views/registro.ejs
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Registro de Usuario - Raíz Financiera</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="/css/registro.css">
+  <link rel="stylesheet" href="../../../css/registro.css">
+  <link href="../../../css/main.css" rel="stylesheet">
   <style>
     body {
-      background: linear-gradient(135deg, #1a1a2e, #16213e);
+      background-image: url('../../../images/back/back_banco.webp');
       min-height: 100vh;
       display: flex;
       align-items: center;
@@ -53,6 +54,33 @@
 </head>
 
 <body>
+
+  <header id="header" class="header d-flex align-items-center fixed-top">
+        <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+
+            <a href="/" class="logo d-flex align-items-center me-auto me-lg-0">
+                <!-- Uncomment the line below if you also wish to use an image logo -->
+                <img src="../../../images/back/logo_raiz_financiera.webp" alt="" style="max-height: 64px;">
+
+
+            </a>
+
+            <nav id="navmenu" class="navmenu">
+                <ul>
+                    <li><a href="#hero" class="active">Home<br></a></li>
+                    <li><a href="#about">Acerca de Nosotros</a></li>
+                    <li><a href="#services">Servicios</a></li>
+                    <li><a href="#portfolio">Otros</a></li>
+                    <li><a href="#team">Grupo de trabajo</a></li>
+                    
+
+                </ul>
+                <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+              </nav>
+
+        </div>
+    </header>
+
   <div class="register-container">
 
     <% if (error) { %>
