--- a/src/interfaces/views/registroADMIN.ejs
+++ b/src/interfaces/views/registroADMIN.ejs
@@ -6,11 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registro de Administrador | Entidad Financiera</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/admin.css">
+    <link rel="stylesheet" href="../../../css/admin.css">
+    <link href="../../../css/main.css" rel="stylesheet">
 
 </head>
 
 <body>
+
+    <header id="header" class="header d-flex align-items-center fixed-top">
+        <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+
+            <a href="/" class="logo d-flex align-items-center me-auto me-lg-0">
+                <!-- Uncomment the line below if you also wish to use an image logo -->
+                <img src="../../../images/back/logo_raiz_financiera.webp" alt="" style="max-height: 64px;">
+
+
+            </a>
+
+            <nav id="navmenu" class="navmenu">
+                <ul>
+                    <li><a href="#hero" class="active">Home<br></a></li>
+                    <li><a href="#about">Acerca de Nosotros</a></li>
+                    <li><a href="#services">Servicios</a></li>
+                    <li><a href="#portfolio">Otros</a></li>
+                    <li><a href="#team">Grupo de trabajo</a></li>
+                    
+
+                </ul>
+                <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+              </nav>
+
+        </div>
+    </header>
+
     <div class="register-container">
         <% if (error) { %>
             <div class="alert alert-danger">
