--- a/src/interfaces/views/login.ejs
+++ b/src/interfaces/views/login.ejs
@@ -41,7 +41,7 @@
     }
 
     .login-card {
-      background-color: #ffffff;
+      background-color: #ffffff98;
       color: #2c3e50;
       padding: 40px 30px;
       border-radius: 16px;
@@ -97,6 +97,7 @@
     }
 
     .back-link:hover {
+      color: #0400ff;
       text-decoration: underline;
     }
   </style>
